[gd_scene load_steps=67 format=2]

[ext_resource path="res://addons/state_machine/machine/resources/condition_usage_resource.gd" type="Script" id=1]
[ext_resource path="res://characters/interaction_area.gd" type="Script" id=2]
[ext_resource path="res://characters/character.gd" type="Script" id=3]
[ext_resource path="res://characters/state_machine/states/action_state_node.gd" type="Script" id=4]
[ext_resource path="res://characters/inventories/character_inventory.gd" type="Script" id=5]
[ext_resource path="res://characters/perception_area.gd" type="Script" id=6]
[ext_resource path="res://characters/state_machine/transition_item.gd" type="Script" id=7]
[ext_resource path="res://characters/controllers/controller.gd" type="Script" id=8]
[ext_resource path="res://audio/sfx_emitter.gd" type="Script" id=9]
[ext_resource path="res://characters/audio/footsteps/footstep_sound.tscn" type="PackedScene" id=10]
[ext_resource path="res://event_system/resources/audio/sfx_emitted_channel.tres" type="Resource" id=11]
[ext_resource path="res://characters/state_machine/states/walk.gd" type="Script" id=12]
[ext_resource path="res://characters/state_machine/state_machine.gd" type="Script" id=13]
[ext_resource path="res://characters/state_machine/states/idle.gd" type="Script" id=14]
[ext_resource path="res://characters/hurt_box.gd" type="Script" id=15]
[ext_resource path="res://characters/state_machine/states/jump_ascending.gd" type="Script" id=16]
[ext_resource path="res://characters/state_machine/states/jump_descending.gd" type="Script" id=17]
[ext_resource path="res://characters/character_controller.gd" type="Script" id=18]
[ext_resource path="res://characters/character_controllers/behavior_tree/character_action_leaf.gd" type="Script" id=19]
[ext_resource path="res://behavior_tree/composites/selector.gd" type="Script" id=20]
[ext_resource path="res://behavior_tree/composites/sequence.gd" type="Script" id=21]
[ext_resource path="res://characters/state_machine_resources/conditions/timer_jump_hold_button.tres" type="Resource" id=22]
[ext_resource path="res://prototype_assets/gui/fonts/default_font.tres" type="DynamicFont" id=23]
[ext_resource path="res://characters/state_machine_resources/conditions/has_hit_head.tres" type="Resource" id=24]
[ext_resource path="res://characters/state_machine_resources/conditions/is_holding_jump.tres" type="Resource" id=25]
[ext_resource path="res://characters/state_machine_resources/conditions/is_moving.tres" type="Resource" id=26]
[ext_resource path="res://characters/state_machine_resources/conditions/is_grounded.tres" type="Resource" id=27]
[ext_resource path="res://behavior_tree/leaves/_condition_leaf.gd" type="Script" id=28]
[ext_resource path="res://characters/character_controllers/jobs/input_reader.tscn" type="PackedScene" id=29]
[ext_resource path="res://characters/state_machine_resources/conditions/is_performing_action.tres" type="Resource" id=30]
[ext_resource path="res://characters/state_machine_resources/conditions/animation_finished.tres" type="Resource" id=32]
[ext_resource path="res://behavior_tree/leaves/_action_leaf.gd" type="Script" id=38]
[ext_resource path="res://behavior_tree/decorators/inverter_decorator.gd" type="Script" id=39]
[ext_resource path="res://characters/character_controllers/character_controller.gd" type="Script" id=40]
[ext_resource path="res://behavior_tree/decorators/runner_decorator.gd" type="Script" id=56]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="Resource" id=11]
script = ExtResource( 1 )
condition = ExtResource( 26 )
expected_result = true

[sub_resource type="Resource" id=12]
script = ExtResource( 7 )
from_states = [ NodePath("Idle") ]
to_state = NodePath("Walk")
conditions = [ SubResource( 11 ) ]
operator = 0

[sub_resource type="Resource" id=15]
script = ExtResource( 1 )
condition = ExtResource( 25 )
expected_result = true

[sub_resource type="Resource" id=16]
script = ExtResource( 7 )
from_states = [ NodePath("Idle"), NodePath("Walk") ]
to_state = NodePath("JumpAscending")
conditions = [ SubResource( 15 ) ]
operator = 0

[sub_resource type="Resource" id=17]
script = ExtResource( 1 )
condition = ExtResource( 24 )
expected_result = true

[sub_resource type="Resource" id=18]
script = ExtResource( 1 )
condition = ExtResource( 25 )
expected_result = false

[sub_resource type="Resource" id=19]
script = ExtResource( 1 )
condition = ExtResource( 22 )
expected_result = true

[sub_resource type="Resource" id=20]
script = ExtResource( 7 )
from_states = [ NodePath("JumpAscending") ]
to_state = NodePath("JumpDescending")
conditions = [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ]
operator = 1

[sub_resource type="Resource" id=21]
script = ExtResource( 1 )
condition = ExtResource( 27 )
expected_result = true

[sub_resource type="Resource" id=22]
script = ExtResource( 7 )
from_states = [ NodePath("JumpDescending") ]
to_state = NodePath("Idle")
conditions = [ SubResource( 21 ) ]
operator = 0

[sub_resource type="Resource" id=23]
script = ExtResource( 1 )
condition = ExtResource( 27 )
expected_result = false

[sub_resource type="Resource" id=24]
script = ExtResource( 7 )
from_states = [ NodePath("Walk"), NodePath("Attack"), NodePath("Give"), NodePath("Operate"), NodePath("PickUp"), NodePath("Take"), NodePath("Idle"), NodePath("PerformAction") ]
to_state = NodePath("JumpDescending")
conditions = [ SubResource( 23 ) ]
operator = 0

[sub_resource type="Resource" id=25]
script = ExtResource( 1 )
condition = ExtResource( 30 )
expected_result = true

[sub_resource type="Resource" id=26]
script = ExtResource( 7 )
from_states = [ NodePath("Idle"), NodePath("Walk") ]
to_state = NodePath("PerformAction")
conditions = [ SubResource( 25 ) ]
operator = 0

[sub_resource type="Resource" id=61]
script = ExtResource( 1 )
condition = ExtResource( 30 )
expected_result = false

[sub_resource type="Resource" id=55]
script = ExtResource( 1 )
condition = ExtResource( 32 )
expected_result = true

[sub_resource type="Resource" id=29]
script = ExtResource( 7 )
from_states = [ NodePath("Attack"), NodePath("PerformAction") ]
to_state = NodePath("Idle")
conditions = [ SubResource( 61 ), SubResource( 55 ) ]
operator = 0

[sub_resource type="Resource" id=62]
script = ExtResource( 1 )
condition = ExtResource( 26 )
expected_result = false

[sub_resource type="Resource" id=63]
script = ExtResource( 7 )
from_states = [ NodePath("Walk") ]
to_state = NodePath("Idle")
conditions = [ SubResource( 62 ) ]
operator = 0

[sub_resource type="CylinderShape" id=8]
radius = 5.0

[sub_resource type="CylinderShape" id=7]
radius = 0.75

[sub_resource type="BoxShape" id=9]
extents = Vector3( 1, 1, 0.5 )

[sub_resource type="GDScript" id=10]
script/source = "extends Label3D

func _process(_delta: float) -> void:
	# warning-ignore:unsafe_property_access
	text = get_node(\"../StateMachine\")._current_state.name
"

[sub_resource type="GDScript" id=64]
script/source = "extends Label3D

func _process(_delta: float) -> void:
	# warning-ignore:unsafe_property_access
	var running_action: ActionLeaf = get_node(\"../Occupation\").blackboard.running_action
	if running_action:
		text = running_action.name
	else:
		text = \"NO OCCUPATION\"
"

[sub_resource type="GDScript" id=60]
script/source = "extends Node

onready var _line: ImmediateGeometry = $Line
onready var _movement_dingle: Spatial = $MovementDingle
onready var _navigation_agent: NavigationAgent = get_node(\"../NavigationAgent\")

func _process(_delta: float) -> void:
	# warning-ignore:unsafe_method_access
	_line.draw_path(_navigation_agent.get_nav_path())
	# warning-ignore:unsafe_property_access
	_line.visible = get_parent().moving_to_destination
	_movement_dingle.translation = _navigation_agent.get_target_location()
	# warning-ignore:unsafe_property_access
	_movement_dingle.visible = get_parent().moving_to_destination
"

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
flags_no_depth_test = true
flags_use_point_size = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="GDScript" id=3]
script/source = "extends ImmediateGeometry

func draw_path(path_array: Array) -> void:
	clear()
	if path_array.empty():
		return
	
	begin(Mesh.PRIMITIVE_POINTS, null)
	add_vertex(path_array[0])
	add_vertex(path_array[path_array.size() - 1])
	end()
	begin(Mesh.PRIMITIVE_LINE_STRIP, null)
	
	for x in path_array:
		add_vertex(x)
	
	end()
"

[sub_resource type="SpatialMaterial" id=4]
flags_no_depth_test = true

[sub_resource type="PrismMesh" id=5]
size = Vector3( 1, 1, 1 )

[sub_resource type="GDScript" id=6]
script/source = "extends Spatial

export var _turn_speed := 2.0

func _process(delta: float) -> void:
	rotate_y(_turn_speed * delta)
"

[node name="Character" type="KinematicBody" groups=["Persist"]]
collision_layer = 4
collision_mask = 15
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
enabled = true
cast_to = Vector3( 0, -0.2, 0 )
collision_mask = 3

[node name="NavigationAgent" type="NavigationAgent" parent="."]
path_desired_distance = 0.5
target_desired_distance = 0.5
path_max_distance = 1.0
avoidance_enabled = true
radius = 0.5
neighbor_dist = 16.0
time_horizon = 2.0
max_speed = 100.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 13 )
entry_state = NodePath("Idle")
_transitions = [ SubResource( 12 ), SubResource( 16 ), SubResource( 20 ), SubResource( 22 ), SubResource( 24 ), SubResource( 26 ), SubResource( 29 ), SubResource( 63 ) ]
_graph_offsets = {
"EntryPoint": Vector2( -548.686, 108.056 ),
"Zoom": 0.694444,
"res://characters/_character.tscn::12": Vector2( -115.786, 452.986 ),
"res://characters/_character.tscn::16": Vector2( 984.214, -47.0142 ),
"res://characters/_character.tscn::20": Vector2( 1744.21, -127.014 ),
"res://characters/_character.tscn::22": Vector2( 2764.21, 12.9858 ),
"res://characters/_character.tscn::24": Vector2( 1664.21, 192.986 ),
"res://characters/_character.tscn::26": Vector2( 884.214, 492.986 ),
"res://characters/_character.tscn::29": Vector2( 1684.21, 432.986 ),
"res://characters/_character.tscn::63": Vector2( 596, 662 ),
NodePath("PerformAction"): Vector2( 1364.21, 492.986 ),
NodePath("JumpDescending"): Vector2( 2444.21, 12.9858 ),
NodePath("JumpAscending"): Vector2( 1384.21, -87.0142 ),
NodePath("Walk"): Vector2( 344.214, 432.986 ),
NodePath("Idle"): Vector2( 1.38306, 133.632 )
}

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 12 )
_character_controller_node = NodePath("../../CharacterController")
_animation_tree_node = NodePath("../../AnimationTree")

[node name="JumpAscending" type="Node" parent="StateMachine"]
script = ExtResource( 16 )
_animation_tree_node = NodePath("../../AnimationTree")

[node name="JumpDescending" type="Node" parent="StateMachine"]
script = ExtResource( 17 )
_animation_tree_node = NodePath("../../AnimationTree")

[node name="PerformAction" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
_character_controller_node = NodePath("../../CharacterController")
_animation_tree_node = NodePath("../../AnimationTree")

[node name="Controller" type="Node" parent="." groups=["PersistData"]]
script = ExtResource( 8 )

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 5 )

[node name="CharacterController" type="Node" parent="."]
script = ExtResource( 18 )
_inventory_node = NodePath("../Inventory")
_perception_area_node = NodePath("../PerceptionArea")
_interaction_area_node = NodePath("../InteractionArea")
_hurt_box_node = NodePath("../HurtBox")

[node name="Actions" type="Node" parent="CharacterController"]
script = ExtResource( 20 )

[node name="InteractWithObjectType" type="Node" parent="CharacterController/Actions"]
script = ExtResource( 21 )

[node name="HasDibbedObject" type="Node" parent="CharacterController/Actions/InteractWithObjectType"]
script = ExtResource( 28 )

[node name="KnowsWhatToDo" type="Node" parent="CharacterController/Actions/InteractWithObjectType"]
script = ExtResource( 28 )

[node name="SelectorComposite" type="Node" parent="CharacterController/Actions/InteractWithObjectType"]
script = ExtResource( 20 )

[node name="SequenceComposite" type="Node" parent="CharacterController/Actions/InteractWithObjectType/SelectorComposite"]
script = ExtResource( 21 )

[node name="InInteractionRange" type="Node" parent="CharacterController/Actions/InteractWithObjectType/SelectorComposite/SequenceComposite"]
script = ExtResource( 28 )

[node name="DoTheThing" type="Node" parent="CharacterController/Actions/InteractWithObjectType/SelectorComposite/SequenceComposite"]
script = ExtResource( 19 )

[node name="MoveIntoPosition" type="Node" parent="CharacterController/Actions/InteractWithObjectType/SelectorComposite"]
script = ExtResource( 19 )

[node name="FindDibbableObject" type="Node" parent="CharacterController/Actions"]
script = ExtResource( 21 )

[node name="SearchDibbableObject" type="Node" parent="CharacterController/Actions/FindDibbableObject"]
script = ExtResource( 20 )

[node name="InInteractionArea" type="Node" parent="CharacterController/Actions/FindDibbableObject/SearchDibbableObject"]
script = ExtResource( 21 )

[node name="ObjectInInteractionArea" type="Node" parent="CharacterController/Actions/FindDibbableObject/SearchDibbableObject/InInteractionArea"]
script = ExtResource( 28 )

[node name="CallDibs" type="Node" parent="CharacterController/Actions/FindDibbableObject/SearchDibbableObject/InInteractionArea"]
script = ExtResource( 19 )

[node name="InPerceptionArea" type="Node" parent="CharacterController/Actions/FindDibbableObject/SearchDibbableObject"]
script = ExtResource( 21 )

[node name="ObjectInPerceptionArea" type="Node" parent="CharacterController/Actions/FindDibbableObject/SearchDibbableObject/InPerceptionArea"]
script = ExtResource( 28 )

[node name="CallDibs" type="Node" parent="CharacterController/Actions/FindDibbableObject/SearchDibbableObject/InPerceptionArea"]
script = ExtResource( 19 )

[node name="FigureOutWhatToDo" type="Node" parent="CharacterController/Actions/FindDibbableObject"]
script = ExtResource( 21 )

[node name="KnowsNotWhatToDo" type="Node" parent="CharacterController/Actions/FindDibbableObject/FigureOutWhatToDo"]
script = ExtResource( 39 )

[node name="KnowsWhatToDo" type="Node" parent="CharacterController/Actions/FindDibbableObject/FigureOutWhatToDo/KnowsNotWhatToDo"]
script = ExtResource( 28 )

[node name="FigureItOut" type="Node" parent="CharacterController/Actions/FindDibbableObject/FigureOutWhatToDo"]
script = ExtResource( 19 )

[node name="Idle" type="Node" parent="CharacterController/Actions"]
script = ExtResource( 19 )

[node name="PerceptionArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 200
input_ray_pickable = false
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="PerceptionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 8 )

[node name="InteractionArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 200
input_ray_pickable = false
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="InteractionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 7 )

[node name="HurtBox" type="Area" parent="."]
collision_layer = 0
collision_mask = 192
script = ExtResource( 15 )

[node name="CollisionShape" type="CollisionShape" parent="HurtBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.5 )
shape = SubResource( 9 )
disabled = true

[node name="Occupation" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 40 )
_character_controller_node = NodePath("../CharacterController")

[node name="OccupationList" type="Node" parent="Occupation"]
script = ExtResource( 20 )

[node name="InputReader" parent="Occupation/OccupationList" instance=ExtResource( 29 )]

[node name="AlwaysRunnerDecorator" type="Node" parent="Occupation/OccupationList"]
script = ExtResource( 56 )

[node name="Idle" type="Node" parent="Occupation/OccupationList/AlwaysRunnerDecorator"]
script = ExtResource( 38 )

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="FootstepSounds" type="Spatial" parent="."]
script = ExtResource( 9 )
_sound_scene = ExtResource( 10 )
_sfx_emitted_channel = ExtResource( 11 )

[node name="CurrentState" type="Label3D" parent="."]
pause_mode = 2
cast_shadow = 0
pixel_size = 0.0005
offset = Vector2( 0, 50 )
billboard = 1
no_depth_test = true
fixed_size = true
font = ExtResource( 23 )
script = SubResource( 10 )

[node name="CurrentOccupation" type="Label3D" parent="."]
pause_mode = 2
cast_shadow = 0
pixel_size = 0.0005
offset = Vector2( 0, 75 )
billboard = 1
no_depth_test = true
fixed_size = true
font = ExtResource( 23 )
script = SubResource( 64 )

[node name="Debug" type="Node" parent="."]
pause_mode = 2
script = SubResource( 60 )

[node name="Line" type="ImmediateGeometry" parent="Debug"]
material_override = SubResource( 2 )
script = SubResource( 3 )

[node name="MovementDingle" type="Spatial" parent="Debug"]
visible = false

[node name="MershInstance" type="MeshInstance" parent="Debug/MovementDingle"]
transform = Transform( -0.5, 0, -2.18557e-08, 0, -1, 0, -4.37114e-08, 0, 0.25, 0, 0.9, 0 )
material_override = SubResource( 4 )
mesh = SubResource( 5 )
script = SubResource( 6 )

[connection signal="equipment_stack_added" from="Inventory" to="Inventory" method="_on_equipment_stack_added"]
[connection signal="item_equipped" from="Inventory" to="HurtBox" method="_on_item_equipped"]
[connection signal="item_unequipped" from="Inventory" to="HurtBox" method="_on_item_unequipped"]
[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_hit_box_entered"]
